--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body=style="background-image:ws_Europe_old_map_2560x1600.jpg">
     <div>
       <h1>R1</h1>
       <nav>
