--- a/app/views/pages/tipps.html.erb
+++ b/app/views/pages/tipps.html.erb
@@ -1,1 +1,3 @@
 <h2> Tipps </h2>
+<t> Nach 5 Jahren R1 haben sich viele Dinge angesammelt, die man bei dem Europaradweg beachten sollte...</t>
+<t> Hier sind einige Tipps für Radler, die das "Abenteuer R1" wagen wollen:</t>
