--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@
  body{
 
    font-family: 'Indie Flower', cursive;
-   background:url(Europakarte.jpg) round center center fixed;
+   background:image-url("Europakarte.jpg") round center center fixed;
    padding:0;
  }
  div{
