--- a/app/views/pages/tipps.html.erb
+++ b/app/views/pages/tipps.html.erb
@@ -1,3 +1,18 @@
 <h2> Tipps </h2>
 <t> Nach 5 Jahren R1 haben sich viele Dinge angesammelt, die man bei dem Europaradweg beachten sollte...</t>
 <t> Hier sind einige Tipps für Radler, die das "Abenteuer R1" wagen wollen:</t>
+
+  <ul>
+  <li>Zelt oder Unterkunft? - Vorallem in Russland gibt es wenig Übernachtungsmöglichkeiten. Da kann es schon mal ziemlich nervenzerrend sein, wenn man am Abend erschöpft und in Gedanken bei einem weichen Bett, ankommt und die einzige Unterkunft im Umkreis von
+     60 Kilometern schon besetzt ist. Aus diesem Grund haben wir bei unserer Reise jede Unterkunft vorgebucht.
+     Das ist allerdings sehr zeitaufwendig und man muss immer die geplanten Tageskilometer erreichen, aber zumindest in Ländern wie Russland ist es sicherer.
+     Auch wenn man mit einem Zelt verreist, ist es ratsam, sich über die Zeltplätze im vorhinein zu informiern.</li>
+  </li>
+    <li>Das richtige Fahrrad - wie man im <a href="travel.html">Reisebericht</a> nachlesen kann, ja, es IST möglich den kompletten R1 mit einem 16-Zoll-Brompton abzufahren.
+      Aber es ist wohl nicht jedermanns Sache. Denn besonders in den baltischen Ländern, Russland und Polen gibt es viele Schotterpisten, die
+      auch mit einem "normal-großem" Fahrrad nicht besonders angenehm zu fahren sind. Das Fahrrad sollte auch Gepäck- wenn nicht sogar ein Zelt tragen können.
+    </li>
+    <li>Die Etappenwahl- den R1 in einem abzufahren ist vielleicht etwas für Tour de France Teilnehmer, aber definitiv kein Muss.
+      So haben wir unsere 5 Jahre R1 in mehrere Etappen von ca. 600-1000 Kilometer in jeweils ca. 2-3 Wochen a ca. 50-100 Kilometern pro Tag geteilt.
+    </li>
+ </ul>
