--- a/app/views/pages/tipps.html.erb
+++ b/app/views/pages/tipps.html.erb
@@ -3,10 +3,10 @@
 <t> Hier sind einige Tipps für Radler, die das "Abenteuer R1" wagen wollen:</t>
 
   <ul>
-  <li>Zelt oder Unterkunft? - Vorallem in Russland gibt es wenig Übernachtungsmöglichkeiten. Da kann es schon mal ziemlich nervenzerrend sein, wenn man am Abend erschöpft und in Gedanken bei einem weichen Bett, ankommt und die einzige Unterkunft im Umkreis von
+  <li>Zelt oder Unterkunft? - Vorallem in Russland gibt es wenige Übernachtungsmöglichkeiten. Da kann es schon mal ziemlich nervenzerrend sein, wenn man am Abend erschöpft und in Gedanken bei einem weichen Bett ankommt und die einzige Unterkunft im Umkreis von
      60 Kilometern schon besetzt ist. Aus diesem Grund haben wir bei unserer Reise jede Unterkunft vorgebucht.
      Das ist allerdings sehr zeitaufwendig und man muss immer die geplanten Tageskilometer erreichen, aber zumindest in Ländern wie Russland ist es sicherer.
-     Auch wenn man mit einem Zelt verreist, ist es ratsam, sich über die Zeltplätze im vorhinein zu informiern.</li>
+     Auch wenn man mit einem Zelt verreist, ist es ratsam, sich im Vorhinein über die Zeltplätze zu informieren.</li>
   </li>
     <li>Das richtige Fahrrad - wie man im <a href="travel.html">Reisebericht</a> nachlesen kann, ja, es IST möglich den kompletten R1 mit einem 16-Zoll-Brompton abzufahren.
       Aber es ist wohl nicht jedermanns Sache. Denn besonders in den baltischen Ländern, Russland und Polen gibt es viele Schotterpisten, die
