--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :name %>
-    <%= f.file_field :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :pictures %>
-    <%= f.text_field :pictures %>
+    <%= f.file_field :pictures %>
   </div>
 
   <div class="actions">
