--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Countries</h1>
+<h2>Länder</h2>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Descriptions</th>
-      <th>Pictures</th>
+      <th>Land</th>
+      <th>Beschreibung</th>
+      <th>Bild</th>
       <th colspan="3"></th>
     </tr>
   </thead>
