--- a/app/views/pages/tipps.html.erb
+++ b/app/views/pages/tipps.html.erb
@@ -10,7 +10,7 @@
   </li>
     <li>Das richtige Fahrrad - wie man im <a href="travel.html">Reisebericht</a> nachlesen kann, ja, es IST möglich den kompletten R1 mit einem 16-Zoll-Brompton abzufahren.
       Aber es ist wohl nicht jedermanns Sache. Denn besonders in den baltischen Ländern, Russland und Polen gibt es viele Schotterpisten, die
-      auch mit einem "normal-großem" Fahrrad nicht besonders angenehm zu fahren sind. Das Fahrrad sollte auch Gepäck- wenn nicht sogar ein Zelt tragen können.
+      auch mit einem "normal-großem" Fahrrad nicht besonders angenehm zu fahren sind. Das Fahrrad sollte auch Gepäck - wenn nicht sogar ein Zelt - tragen können.
     </li>
     <li>Die Etappenwahl- den R1 in einem abzufahren ist vielleicht etwas für Tour de France Teilnehmer, aber definitiv kein Muss.
       So haben wir unsere 5 Jahre R1 in mehrere Etappen von ca. 600-1000 Kilometer in jeweils ca. 2-3 Wochen a ca. 50-100 Kilometern pro Tag geteilt.
