--- a/app/views/pages/travel.html.erb
+++ b/app/views/pages/travel.html.erb
@@ -1,3 +1,23 @@
 <h2> Mit 16 Zoll Rädern durch Europa - ein Reisebericht </h2>
 <t>An meinem 8. Geburtstag hat sich mein Leben verändert. Das <a href="http://de.brompton.com" target="_blank">Brompton</a>, mit dem ich noch im gleichen Jahr eine unglaubliche Reise antreten werde, war ein wirklich tolles Geschenk!</t>
-<t>
+<img src="/Ausblick.JPG" alt="Ausblick">
+<img src="/Fahrradreperaturen.JPG">
+<img src="/Markoldendorf karte.JPG">
+<img src="/Matschfüße.JPG">
+<img src="/Niederlande schild.JPG">
+<img src="/P1020766.JPG">
+<img src="/viele Fahrräder Niederlande.JPG">
+<img src="/Wind Nordsee.JPG">
+<img src="/schwarz weiß brompton.JPG">
+<img src="/stau.JPG">
+<img src="/schieben.JPG">
+<img src="/Polen straße.JPG">
+<img src="/Russland Straßensperre.JPG">
+<img src="/Lettland Schild.JPG">
+<img src="/man kommt nicht immer voran.JPG">
+<img src="/Sigulda.jpg">
+<img src="/Riga.jpg">
+<img src="/Pfütze.jpg">
+<img src="/Ziel.jpg">
+<p>Geschafft!!!!!!</p>
+<t>Und was jetzt? Wie es bei uns weiter geht, können Sie im <a href="outlook.html">Ausblick</a> nachlesen!
