--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= link_to "Auf 16 Zoll Rädern durch Europa - ein Reisebericht", pages_travel_path%>
         <%= link_to "Tipps", pages_tipps_path%>
         <%= link_to "Ausblick", pages_outlook_path%>
+        <%= link_to "Länder", countries_path%>
     <%= yield %>
   </div>
   <footer>
