kleine Änderungen-Reisebericht

--- a/app/views/pages/travel.html.erb
+++ b/app/views/pages/travel.html.erb
@@ -2,21 +2,20 @@
 <t>An meinem 8. Geburtstag hat sich mein Leben verändert. Das <a href="http://de.brompton.com" target="_blank">Brompton</a>, mit dem ich noch im gleichen Jahr eine unglaubliche Reise antreten werde, war ein wirklich tolles Geschenk!</t>
 <img src="/schwarz weiß brompton.JPG">
 <img src="/Matschfüße.JPG">
+<t>Wir sind 2010 von Berlin gestartet. Zuerst fuhren wir durch Deutschland. Im Harz haben wir  unzählige Höhenmeter überwunden.
+   Entsprechend schön waren da die Ausblicke und Abfahrten! </t>
 <img src="/Ausblick.JPG" alt="Ausblick">
+<t>In all den Jahren hatten wir gefühlt 5000 Platten und mindestens 10 geplatzte Reifen.</t>
 <img src="/Fahrradreperaturen.JPG">
-<img src="/Markoldendorf karte.JPG">
 <img src="/Niederlande schild.JPG">
-<img src="/P1020766.JPG">
 <img src="/viele Fahrräder Niederlande.JPG">
 <img src="/Wind Nordsee.JPG">
 <img src="/stau.JPG">
 <img src="/schieben.JPG">
-<img src="/Polen straße.JPG">
 <img src="/Russland Straßensperre.JPG">
 <img src="/Lettland Schild.JPG">
 <img src="/man kommt nicht immer voran.JPG">
 <img src="/Sigulda.jpg">
-<img src="/Riga.jpg">
 <img src="/Pfütze.jpg">
 <img src="/Ziel.jpg">
 <p>Geschafft!!!!!!</p>
