--- a/app/views/pages/tipps.html.erb
+++ b/app/views/pages/tipps.html.erb
@@ -8,7 +8,7 @@
      Das ist allerdings sehr zeitaufwendig und man muss immer die geplanten Tageskilometer erreichen, aber zumindest in Ländern wie Russland ist es sicherer.
      Auch wenn man mit einem Zelt verreist, ist es ratsam, sich im Vorhinein über die Zeltplätze zu informieren.</li>
   </li>
-    <li>Das richtige Fahrrad <img src="/brompton.jpg"> - wie man im <a href="travel.html">Reisebericht</a> nachlesen kann, ja, es IST möglich den kompletten R1 mit einem 16-Zoll-Brompton abzufahren.
+    <li>Das richtige Fahrrad <img src="/Brompton.jpg"> - wie man im <a href="travel.html">Reisebericht</a> nachlesen kann, ja, es IST möglich den kompletten R1 mit einem 16-Zoll-Brompton abzufahren.
       Aber es ist wohl nicht jedermanns Sache. Denn besonders in den baltischen Ländern, Russland und Polen gibt es viele Schotterpisten, die
       auch mit einem "normal-großem" Fahrrad nicht besonders angenehm zu fahren sind. Das Fahrrad sollte auch Gepäck - wenn nicht sogar ein Zelt - tragen können.
     </li>
