--- a/app/views/pages/outlook.html.erb
+++ b/app/views/pages/outlook.html.erb
@@ -1,1 +1,4 @@
 <h2> Ausblick </h2>
+<p>Abenteuer geschafft!</p>
+<t>Aber was jetzt?
+  Wenn Sie sich genau wie wir nicht mit dem Titel "Abenteurer" begnügen wollen, haben wir hier ein paar Routen zum weiterfahren für sie zusammengestellt:</t>
