--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -7,5 +7,6 @@
 </ul>
 
 <img src="http://radtouren-magazin.com/wp-content/uploads/2013/06/Wegweiser2_Radreise_R1_RT_0413_Q_Kothe.jpg" alt="R1 Europaradweg">
+<figcaption>Quelle:http://radtouren-magazin.com/wp-content/uploads/2013/06/Wegweiser2_Radreise_R1_RT_0413_Q_Kothe.jpg</figcaption>
 
 <p> DAS ALLES ist der R1, DER Europaradweg</p>
