--- a/app/views/pages/outlook.html.erb
+++ b/app/views/pages/outlook.html.erb
@@ -1,4 +1,6 @@
 <h2> Ausblick </h2>
 <p>Abenteuer geschafft!</p>
 <t>Aber was jetzt?
-  Wenn Sie sich genau wie wir nicht mit dem Titel "Abenteurer" begnügen wollen, haben wir hier ein paar Routen zum weiterfahren für sie zusammengestellt:</t>
+  Wenn Sie sich genau wie wir nicht mit dem Titel "Abenteurer" begnügen wollen, haben wir hier ein paar Routen zum Weiterfahren für sie zusammengestellt:</t>
+  <ul>
+    <li><h3>Masuren Radweg</h3> Eine gute Möglichkeit, um die schöne Natur Polens näher kennen zu lernen, ist der Masurenradweg. Der Masurenradweg kreuzt sich  dem R1 und kann so auch direkt mit ihm verknüpft werden.</li>
