--- a/app/views/pages/range.html.erb
+++ b/app/views/pages/range.html.erb
@@ -1,5 +1,6 @@
 <h2> Die Strecke</h2>
 <t>Der Europaradweg R1 (oder auch Euroroute R1) führt über ca. 3800 Kilometer vom französischen Bologne-sur-Mer im Westen durch neun Länder und drei Zeitzonen nach Sankt Petersburg im Osten.</t>
 <img src="http://www.euroroute-r1.de/Entryimages/Europakarte_int-2.gif" alt="Karte des R1">
+<figcaption>Quelle:http://www.euroroute-r1.de/Entryimages/Europakarte_int-2.gif</figcaption>
 <t>Die Wegbeschaffenheit der einzelnden Streckenabschnitte sind so unterschiedlich wie die einzelnden Länder auch - doch der R1 ist machbar, sogar mit einem Brompton auf 16 Zoll Rädern...
    lesen Sie hierzu mehr im <a href="travel.html"> Reisebericht</a>!
