--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -3,11 +3,11 @@
 <h2>Länder</h2>
 <ul>
     <% @countries.each do |country| %>
-    
-        <li><%= country.name %>
-        <%= link_to 'Show', country %>
-        <%= link_to 'Edit', edit_country_path(country) %>
-        <%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+
+        <li><span style="font-size:50px;color:#1F1E1E;"><%= link_to country.name , country %></span>
+
+        <span style="font-size:10px;"><%= link_to 'Edit', edit_country_path(country) %>
+        <%= link_to 'Destroy', country, method: :delete, data: { confirm: 'Are you sure?' } %></span></li>
 
     <% end %>
 </ul>
