--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <label for="Betreff">Betreff</label>
         <%= f.text_field :header %>
       <label for="Nachricht">Nachricht</label>
-          <%= f.text_field :body %>
+          <%= f.text_area :body %>
       <label for="email">Meine Email-Adresse</label>
         <%= f.text_field :email %>
       <!--< label for="Benachrichtigund">  Ich möchte eine Nachricht erhalten, wenn es Neues zum R1 gibt!</Label>
